# cdpr_workspace

./: .gitignore  MANUSCRIPT_ADDITIONAL_FIGURES.md  README.md  requirements.txt
data/: workspace_maps.csv  workspace_summary.json
src/: CMakeLists.txt
src/cdpr_control/: CMakeLists.txt  package.xml  setup.py
src/cdpr_control/launch/: constant_tension.launch  run_experiment.launch
src/cdpr_control/scripts/: classical_ctc.py  constant_tension_experiment.py  data_logger.py  hybrid_ctc.py
src/cdpr_control/src/cdpr_control/: __init__.py  cdpr_model.py  ctc_node.py  trajectories.py
src/cdpr_gazebo/: CMakeLists.txt  package.xml
src/cdpr_gazebo/config/: cdpr_params.yaml
src/cdpr_gazebo/launch/: cdpr_sim.launch
src/cdpr_gazebo/models/cdpr_frame/: model.config  model.sdf
src/cdpr_gazebo/models/cdpr_platform/: model.config  model.sdf
src/cdpr_gazebo/src/: cdpr_force_plugin.cpp
src/cdpr_gazebo/worlds/: cdpr_world.world
src/cdpr_postprocess/: CMakeLists.txt  package.xml
src/cdpr_postprocess/launch/: additional_figures.launch  workspace_figures.launch
src/cdpr_postprocess/scripts/: compute_workspace.py  make_additional_figures.py  make_figures.py  rosbag_to_csv.py
