<?xml version="1.0"?>
<package format="2">
  <name>cdpr_control</name>
  <version>0.1.0</version>
  <description>Computed torque controllers, trajectories, QP tension allocation, and logging for the CDPR simulation.</description>

  <maintainer email="cdpr@example.com">CDPR Simulation Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>cdpr_gazebo</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-cvxopt</exec_depend>
</package>
