<?xml version="1.0"?>
<package format="2">
  <name>cdpr_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo world, SDF models, and force plugin for an eight-cable CDPR.</description>

  <maintainer email="cdpr@example.com">CDPR Simulation Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
