<?xml version="1.0"?>
<package format="2">
  <name>cdpr_postprocess</name>
  <version>0.1.0</version>
  <description>Offline workspace computation and figure reproduction scripts for the CDPR study.</description>

  <maintainer email="cdpr@example.com">CDPR Simulation Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cdpr_control</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-cvxopt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rosbag</exec_depend>
</package>
